Implement message service
